Implemented Data Mapper

--- a/backend/SolarCoffee.API/SolarCoffee.API.csproj
+++ b/backend/SolarCoffee.API/SolarCoffee.API.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SolarCoffee.Infrastructure\SolarCoffee.Infrastructure.csproj" />
+    <ProjectReference Include="..\SolarCoffee.Services\SolarCoffee.Services.csproj" />
   </ItemGroup>
 
 </Project>
