--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
