--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,18 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-pathify": "^3.0.0-beta"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
