--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "cypress": "^13.15.0",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "vue": "^2.6.14",
